--- a/presentation/src/main/res/layout/activity_setting.xml
+++ b/presentation/src/main/res/layout/activity_setting.xml
@@ -61,7 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/general"
-                    android:textColor="@color/md_black_2"
+                    android:textColor="@color/md_black_0"
                     android:textSize="@dimen/_13ssp" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -71,7 +71,9 @@
                     android:layout_marginHorizontal="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_13sdp"
                     android:layout_weight="1"
+                    android:paddingVertical="@dimen/_8sdp"
                     android:text="@string/change_pattern"
+                    android:textColor="@color/text_title_setting"
                     android:textSize="@dimen/_13ssp" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -94,6 +96,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/setting_fingerprint_not_registered_title"
+                            android:textColor="@color/text_title_setting"
                             android:textSize="@dimen/_13ssp" />
 
                         <androidx.appcompat.widget.AppCompatTextView
@@ -127,7 +130,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_card_intruders_title"
-                    android:textColor="@color/md_black_2"
+                    android:textColor="@color/md_black_0"
                     android:textSize="@dimen/_13ssp" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -149,6 +152,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/settings_enable_intruders_title"
+                            android:textColor="@color/text_title_setting"
                             android:textSize="@dimen/_13ssp" />
 
                         <androidx.appcompat.widget.AppCompatTextView
@@ -178,6 +182,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/settings_intruders_folder_title"
+                        android:textColor="@color/text_title_setting"
                         android:textSize="@dimen/_13ssp" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -202,7 +207,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/advanced_settings"
-                    android:textColor="@color/md_black_2"
+                    android:textColor="@color/md_black_0"
                     android:textSize="@dimen/_13ssp" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -218,6 +223,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/sound_alarm"
+                        android:textColor="@color/text_title_setting"
                         android:textSize="@dimen/_13ssp" />
 
                     <com.suke.widget.SwitchButton
@@ -236,13 +242,14 @@
                     android:background="?attr/selectableItemBackground"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:paddingVertical="@dimen/_5sdp">
+                    android:paddingVertical="@dimen/_8sdp">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/number_of_times_allowed"
+                        android:textColor="@color/text_title_setting"
                         android:textSize="@dimen/_13ssp" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -268,6 +275,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/prevent_uninstall"
+                        android:textColor="@color/text_title_setting"
                         android:textSize="@dimen/_13ssp" />
 
                     <com.suke.widget.SwitchButton
@@ -297,6 +305,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Use Camouflage Icon"
+                            android:textColor="@color/text_title_setting"
                             android:textSize="@dimen/_13ssp" />
 
                         <androidx.appcompat.widget.AppCompatTextView
