--- a/presentation/src/main/res/layout/item_file_hide_pic.xml
+++ b/presentation/src/main/res/layout/item_file_hide_pic.xml
@@ -30,7 +30,7 @@
                 android:layout_height="@dimen/_15sdp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:src="@drawable/ok" />
+                android:src="@drawable/ic_ok" />
         </RelativeLayout>
     </RelativeLayout>
 
