--- a/presentation/src/main/res/layout/item_safebox.xml
+++ b/presentation/src/main/res/layout/item_safebox.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
@@ -19,7 +20,8 @@
             android:layout_height="72dp"
             android:contentDescription="@string/app_name"
             android:padding="16dp"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            tools:src="@drawable/box_file" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -40,7 +42,8 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:textColor="@color/md_black_0"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:text="File Encryption" />
 
                 <TextView
                     android:id="@+id/tv_detail"
@@ -50,12 +53,13 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:textColor="@color/md_black_2"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    tools:text="Encrypted 0" />
             </LinearLayout>
 
             <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="16dp"
