--- a/presentation/src/main/res/layout/item_file_hide_pic.xml
+++ b/presentation/src/main/res/layout/item_file_hide_pic.xml
@@ -8,7 +8,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="2dp"
+        android:background="@drawable/round_image">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/img_pre_preview"
