--- a/presentation/src/main/res/values-night/themes.xml
+++ b/presentation/src/main/res/values-night/themes.xml
@@ -24,7 +24,7 @@
         <item name="android:windowNoTitle">true</item>
 
         <item name="android:fitsSystemWindows">true</item>
-        <item name="android:fontFamily">@font/google_sans_medium</item>
+        <item name="android:fontFamily">@font/averta_regular</item>
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:enforceNavigationBarContrast" tools:ignore="NewApi">false</item>
