--- a/presentation/src/main/res/layout/activity_file_preview.xml
+++ b/presentation/src/main/res/layout/activity_file_preview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6750A3"
@@ -12,63 +13,70 @@
         android:id="@+id/rl_title"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:background="@color/white"
         android:clipToPadding="false"
         android:fitsSystemWindows="true">
 
-        <RelativeLayout
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivBack"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:background="@drawable/bg_setting_button"
+            android:padding="@dimen/_5sdp"
+            android:src="@drawable/ic_round_arrow_back_ios_24"
+            app:tint="#777aa1" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvTitle"
+            style="@style/TextHeaderStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_toStartOf="@+id/layoutCheckbox"
+            android:layout_toEndOf="@+id/ivBack"
+            android:gravity="center_vertical"
+            tools:text="Screen Title" />
 
-            <ImageView
-                android:id="@+id/btn_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:gravity="center"
-                android:src="@drawable/ic_keyboard_backspace_24" />
-
-            <TextView
-                android:id="@+id/file_hide_txt_title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignStart="@+id/btn_back"
-                android:layout_marginStart="72dp"
-                android:gravity="center_vertical"
-                android:textColor="@color/text_color_white"
-                android:textSize="20sp" />
-        </RelativeLayout>
-
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/item_file_checkbox_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <FrameLayout
+            android:id="@+id/layoutCheckbox"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_centerInParent="true"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_toStartOf="@id/preview_btn_hide"
-            android:background="@drawable/checkbox_selector"
-            android:button="@null"
-            android:checked="false"
-            android:gravity="center"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:buttonCompat="@null" />
+            android:background="@drawable/bg_setting_button">
 
-        <ImageView
+            <androidx.appcompat.widget.AppCompatCheckBox
+                android:id="@+id/item_file_checkbox_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/checkbox_selector"
+                android:button="@null"
+
+                android:checked="false"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                app:buttonCompat="@null"
+                app:tint="#777aa1" />
+        </FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/preview_btn_hide"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:background="@drawable/bg_setting_button"
             android:gravity="center"
+            android:padding="@dimen/_5sdp"
             android:src="@drawable/ic_done_24"
-            android:text="@string/file_hide_btn" />
+            android:text="@string/file_hide_btn"
+            app:tint="#777aa1" />
 
     </RelativeLayout>
 
