--- a/presentation/src/main/res/layout/activity_file_preview_viewpager.xml
+++ b/presentation/src/main/res/layout/activity_file_preview_viewpager.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
@@ -13,66 +15,63 @@
         android:layout_below="@+id/viewpage_title"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:background="@color/white" />
+        android:background="#F2F2F2" />
 
     <RelativeLayout
         android:id="@+id/viewpage_title"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#6750A3">
+        android:background="@color/white">
 
-        <RelativeLayout
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/btn_back"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:background="@drawable/bg_setting_button"
+            android:padding="@dimen/_5sdp"
+            android:src="@drawable/ic_round_arrow_back_ios_24"
+            app:tint="#777aa1" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/file_hide_txt_title"
+            style="@style/TextHeaderStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/btn_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:gravity="center"
-                android:src="@drawable/ic_keyboard_backspace_24" />
-
-            <TextView
-                android:id="@+id/file_hide_txt_title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignStart="@+id/btn_back"
-                android:layout_marginStart="72dp"
-                android:gravity="center_vertical"
-                android:text="@string/preview_image"
-                android:textColor="@color/text_color_white"
-                android:textSize="20sp" />
-        </RelativeLayout>
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_toStartOf="@+id/pic_hide_btn_edit"
+            android:layout_toEndOf="@+id/btn_back"
+            android:gravity="center_vertical"
+            tools:text="Screen Title" />
 
         <LinearLayout
             android:id="@+id/pic_hide_btn_edit"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/_20sdp">
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:gravity="center_vertical">
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/pic_hide_img_recovery"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_rotate_right_24" />
+                android:background="@drawable/bg_setting_button"
+                android:padding="@dimen/_5sdp"
+                android:src="@drawable/ic_rotate_right_24"
+                app:tint="#777aa1" />
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/pic_hide_img_del"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_delete_24" />
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:background="@drawable/bg_setting_button"
+                android:padding="@dimen/_5sdp"
+                android:src="@drawable/ic_delete_24"
+                app:tint="#777aa1" />
         </LinearLayout>
     </RelativeLayout>
 
