--- a/presentation/src/main/res/layout/activity_setting.xml
+++ b/presentation/src/main/res/layout/activity_setting.xml
@@ -6,38 +6,11 @@
     android:background="#F2F2F2"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/toolbar"
+    <com.base.presentation.ui.view.LayoutAppHeader
+        android:id="@+id/appHeader"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/color_toolbar_hide_file"
-        android:clipToPadding="false"
-        android:fitsSystemWindows="true"
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/buttonBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:gravity="center"
-            app:srcCompat="@drawable/ic_keyboard_backspace_24" />
-
-        <TextView
-            android:id="@+id/textTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignStart="@+id/buttonBack"
-            android:layout_marginStart="72dp"
-            android:fontFamily="@font/averta_black"
-            android:gravity="center_vertical"
-            android:text="@string/setting"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_20ssp" />
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        app:title="@string/setting" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -55,7 +28,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_group_setting"
-                android:elevation="@dimen/_5sdp"
                 android:orientation="vertical"
                 android:padding="@dimen/_5sdp">
 
@@ -148,6 +120,7 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvLanguage"
                     style="@style/TitleItemSettingStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -189,7 +162,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/background_group_setting"
-                android:elevation="@dimen/_5sdp"
                 android:orientation="vertical"
                 android:padding="@dimen/_5sdp">
 
@@ -264,7 +236,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/background_group_setting"
-                android:elevation="@dimen/_5sdp"
                 android:orientation="vertical"
                 android:padding="@dimen/_5sdp">
 
@@ -382,10 +353,11 @@
                         android:id="@+id/imgCamouflageIcon"
                         android:layout_width="@dimen/_40sdp"
                         android:layout_height="@dimen/_40sdp"
+                        android:background="@drawable/bg_setting_button"
                         android:contentDescription="@string/app_name"
                         android:scaleType="fitXY"
                         app:shapeAppearanceOverlay="@style/RoundedImageView"
-                        app:srcCompat="@mipmap/ic_launcher_round" />
+                        app:srcCompat="@drawable/ic_hidden_folder" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.appcompat.widget.LinearLayoutCompat>
