--- a/presentation/src/main/res/layout/item_safebox.xml
+++ b/presentation/src/main/res/layout/item_safebox.xml
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:fontFamily="@font/averta_bold"
+                    android:fontFamily="@font/averta_regular"
                     android:gravity="center"
                     android:maxLines="1"
                     android:textColor="@color/md_black_2"
