--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -6,8 +6,6 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
 
     <!-- button -->
     <color name="clear_button_text_color">#2196F3</color>
@@ -44,4 +42,7 @@
 
     <color name="color_toolbar_hide_file">#6750A3</color>
     <color name="title_setting_item">#E66750A3</color>
+    <color name="color_text_primary">#1B1D21</color>
+    <color name="color_background_primary">#FFFFFF</color>
+    <color name="colorGray">#BFBFBF</color>
 </resources>
